--- a/templates/404.html
+++ b/templates/404.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'shared/base.html' %}
+{% block content %}
+<h1>404 - Page not found</h1>
+<p>The page you are looking for does not exist.</p>
+<a href="{% url 'common:home' %}">Go back home</a>
+{% endblock %}
