--- a/templates/games/game-details-page.html
+++ b/templates/games/game-details-page.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'shared/base.html' %}
+{% block content %}
+<h2>Game Details</h2>
+<p>Team 1: Team 1 Placeholder</p>
+<p>Team 2: Team 2 Placeholder</p>
+<p>Date: 2026-01-01</p>
+<p>Score: 0 - 0</p>
+{% endblock %}
