--- a/templates/games/game-edit-page.html
+++ b/templates/games/game-edit-page.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'shared/base.html' %}
+{% block content %}
+<h2>Edit Game</h2>
+<form method="post">
+    {% csrf_token %}
+    <p>Team 1: <input type="text" name="team1" value="Team 1"></p>
+    <p>Team 2: <input type="text" name="team2" value="Team 2"></p>
+    <p>Date: <input type="date" name="date" value="2026-01-01"></p>
+    <p>Score Team 1: <input type="number" name="score1" value="0"></p>
+    <p>Score Team 2: <input type="number" name="score2" value="0"></p>
+    <button type="submit">Edit Game</button>
+</form>
+{% endblock %}
