--- a/templates/players/player-add-page.html
+++ b/templates/players/player-add-page.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'shared/base.html' %}
+{% block content %}
+<h2>Add Player</h2>
+<form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <p>Name: <input type="text" name="name" placeholder="Player Name"></p>
+    <p>Position: <input type="text" name="position" placeholder="Position"></p>
+    <p>Photo: <input type="file" name="photo"></p>
+    <p>Team: <input type="text" name="team" placeholder="Team"></p>
+    <button type="submit">Add Player</button>
+</form>
+{% endblock %}
