--- a/templates/players/player-details-page.html
+++ b/templates/players/player-details-page.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'shared/base.html' %}
+{% block content %}
+<h2>Player Details</h2>
+<p>Name: Player Placeholder</p>
+<p>Position: Position Placeholder</p>
+<p>Team: Team Placeholder</p>
+<img src="#" alt="Player Photo" width="100">
+{% endblock %}
