--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -1,10 +1,25 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Basketball League</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
+
+<header>
+    {% include 'shared/nav.html' %}
+</header>
+
+<main class="container">
+    {% block content %}
+    {% endblock %}
+</main>
+
+<footer class="footer">
+    <span>© Basketball League</span>
+</footer>
 
 </body>
 </html>
