--- a/templates/teams/team-add-page.html
+++ b/templates/teams/team-add-page.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'shared/base.html' %}
+{% block content %}
+<h2>Add Team</h2>
+<form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <p>Name: <input type="text" name="name" placeholder="Team Name"></p>
+    <p>City: <input type="text" name="city" placeholder="City"></p>
+    <p>Year Founded: <input type="number" name="year_founded"></p>
+    <p>Logo: <input type="file" name="logo"></p>
+    <p>Coach: <input type="text" name="coach_name"></p>
+    <button type="submit">Add Team</button>
+</form>
+{% endblock %}
