--- a/templates/teams/team-delete-page.html
+++ b/templates/teams/team-delete-page.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'shared/base.html' %}
+{% block content %}
+<h2>Delete Team</h2>
+<p>Are you sure you want to delete this team?</p>
+<form method="post">
+    {% csrf_token %}
+    <button type="submit">Yes, Delete</button>
+    <a href="{% url 'common:home' %}">Cancel</a>
+</form>
+{% endblock %}
