--- a/templates/teams/team-details-page.html
+++ b/templates/teams/team-details-page.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'shared/base.html' %}
+{% block content %}
+<h2>Team Details</h2>
+<p>Name: Team Placeholder</p>
+<p>City: City Placeholder</p>
+<p>Year Founded: 2000</p>
+<p>Coach: Coach Name</p>
+<img src="#" alt="Team Logo" width="100">
+{% endblock %}
