--- a/templates/teams/team-edit-page.html
+++ b/templates/teams/team-edit-page.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'shared/base.html' %}
+{% block content %}
+<h2>Edit Team</h2>
+<form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <p>Name: <input type="text" name="name" value="Team Placeholder"></p>
+    <p>City: <input type="text" name="city" value="City Placeholder"></p>
+    <p>Year Founded: <input type="number" name="year_founded" value="2000"></p>
+    <p>Logo: <input type="file" name="logo"></p>
+    <p>Coach: <input type="text" name="coach_name" value="Coach Name"></p>
+    <button type="submit">Edit Team</button>
+</form>
+{% endblock %}
