--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -8,10 +8,24 @@ body{
 
 .navbar{
     background : #1b263b;
-    padding: 15px;
-    display: flex;
-    justify-content: space-between;
+    padding: 15px 40px;
+
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;;
     align-items: center;
+}
+
+.navbar a{
+    color: white;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.navbar a:hover{
+    color: #f1c40f;
+}
+.nav-left{
+    justify-self: start;
 }
 
 .navbar img{
@@ -19,9 +33,23 @@ body{
     margin : auto;
 }
 
+.nav-center img{
+    height: 180px;
+    width: auto;
+}
+.nav-center{
+    justify-self: center;
+}
+
+.nav-right{
+    justify-self: end;
+    display: flex;
+    gap: 20px;
+}
+
 .team-grid{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit,minmax(180px,1fr));
     gap: 30px;
     margin-top: 40px;
     text-align: center;
@@ -59,4 +87,18 @@ body{
     height: 70px;
     border-radius: 50%;
     margin-right: 15px;
+}
+
+a{
+    color: white;
+    text-decoration: none;
+}
+
+a:hover{
+    color: #f1c40f;
+}
+
+.team-card a{
+    color: white;
+    font-weight: 600;
 }
