--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,10 @@
 {% extends 'shared/base.html' %}
 {% block content %}
-<h1>404 - Page not found</h1>
-<p>The page you are looking for does not exist.</p>
-<a href="{% url 'common:home' %}">Go back home</a>
+<div class="text-center mt-5">
+    <h1 class="display-4">404</h1>
+    <p class="lead">Page not found</p>
+    <a href="{% url 'common:home' %}" class="btn btn-primary">
+        Go back home
+    </a>
+</div>>
 {% endblock %}
