--- a/templates/common/award_add.html
+++ b/templates/common/award_add.html
@@ -1,15 +1,11 @@
 {% extends 'shared/base.html' %}
 {% block content %}
-
 <div class="edit-delete">
-    <h2>Edit Game</h2>
+    <h2>Add Award</h2>
     <form method="post" class="card p-4 shadow-sm">
-
+        {{ form.as_p }}
         {% csrf_token %}
-        {{ form }}
-
-        <button type="submit" class="btn btn-warning mt-3">Save Changes</button>
-
+        <button type="submit" class="btn btn-success mt-3">Add Award</button>
 </form>
 </div>
 {% endblock %}
