--- a/templates/games/game-delete-stats-page.html
+++ b/templates/games/game-delete-stats-page.html
@@ -1,11 +1,11 @@
 {% extends 'shared/base.html' %}
 {% block content %}
 <div class="edit-delete">
-    <h2>Delete Player</h2>
+    <h2>Delete Player Stats</h2>
     <form method="post">
         {{ form }}
         {% csrf_token %}
-        <button class="btn btn-danger btn-sm" type="submit">Yes, Delete</button>
+        <button class="btn btn-danger btn-sm" type="submit">Delete</button>
         <a class="btn btn-warning btn-sm" href=javascript:history.back()>Cancel</a>
 </form>
 </div>
