--- a/templates/players/player-edit-page.html
+++ b/templates/players/player-edit-page.html
@@ -1,12 +1,11 @@
 {% extends 'shared/base.html' %}
 {% block content %}
-<h2>Edit Player</h2>
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <p>Name: <input type="text" name="name" value="Player Placeholder"></p>
-    <p>Position: <input type="text" name="position" value="Position Placeholder"></p>
-    <p>Photo: <input type="file" name="photo"></p>
-    <p>Team: <input type="text" name="team" value="Team Placeholder"></p>
-    <button type="submit">Edit Player</button>
+<div class="edit-delete">
+    <h2>Edit Player</h2>
+    <form method="post" enctype="multipart/form-data" class="card p-4 shadow-sm">
+        {% csrf_token %}
+        {{ form }}
+        <button type="submit" class="btn btn-warning mt-3">Save Changes</button>
 </form>
+</div>
 {% endblock %}
