--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -2,22 +2,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <meta charset="UTF-8">
     <title>Basketball League</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 <body>
 
 <header>
     {% include 'shared/nav.html' %}
 </header>
 
-<main class="container">
+<main class="container mt-4">
     {% block content %}
     {% endblock %}
 </main>
 
-<footer class="footer">
+<footer class="text-left mt-5 mb-3">
     <span>© Basketball League</span>
 </footer>
 
