--- a/templates/shared/nav.html
+++ b/templates/shared/nav.html
@@ -10,6 +10,7 @@
     </div>
 
     <div class = "nav-right">
+        <a class="add-btn" href="{% url 'common:award_add' %}">Add Award</a>
         <a href="{% url 'teams:add' %}">Add Team</a>
         <a href="{% url 'players:add' %}">Add Player</a>
         <a href="{% url 'games:add' %}">Add Game</a>
