--- a/templates/teams/team-add-page.html
+++ b/templates/teams/team-add-page.html
@@ -1,13 +1,21 @@
 {% extends 'shared/base.html' %}
 {% block content %}
-<h2>Add Team</h2>
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <p>Name: <input type="text" name="name" placeholder="Team Name"></p>
-    <p>City: <input type="text" name="city" placeholder="City"></p>
-    <p>Year Founded: <input type="number" name="year_founded"></p>
-    <p>Logo: <input type="file" name="logo"></p>
-    <p>Coach: <input type="text" name="coach_name"></p>
-    <button type="submit">Add Team</button>
+<div class="edit-delete">
+    <h2>Add Team</h2>
+    <form method="post" enctype="multipart/form-data" class="card p-4 shadow-sm">
+
+        {% csrf_token %}
+         {% if form.non_field_errors %}
+            <div class="alert alert-danger">{{ form.non_field_errors }}</div>
+        {% endif %}
+        {% if form.errors %} 
+            <div class="alert alert-danger">{{ form.errors }}</div>
+        {% endif %}
+
+
+        {{ form.as_p }}
+
+        <button type="submit" class="btn btn-success mt-3">Add Team</button>
 </form>
+</div>
 {% endblock %}
