chore:Added custom tag,paginators,filters&sorting

--- a/templates/shared/nav.html
+++ b/templates/shared/nav.html
@@ -14,5 +14,8 @@
         <a href="{% url 'teams:add' %}">Add Team</a>
         <a href="{% url 'players:add' %}">Add Player</a>
         <a href="{% url 'games:add' %}">Add Game</a>
+        <a href="{% url 'players:list' %}">Players</a>
+        <a href="{% url 'teams:list' %}">Teams</a>
+        <a href="{% url 'games:list' %}">Games</a>
     </div>
 </nav>
