--- a/templates/common/home-page.html
+++ b/templates/common/home-page.html
@@ -17,6 +17,19 @@
     </div>
     {% endfor %}
 </div>
+<div class="mt-3">
+      {% if teams.has_previous %}
+    <a href="?team_page=1&game_page={{ request.GET.game_page }}" class="btn btn-outline-secondary btn-sm text-white">First</a>
+    <a href="?team_page={{ teams.previous_page_number }}&game_page={{ request.GET.game_page }}" class="btn btn-outline-secondary btn-sm text-white">Previous</a>
+    {% endif %}
+
+<span class="mx-2">Page {{ teams.number }} of {{ teams.paginator.num_pages }}</span>
+
+    {% if teams.has_next %}
+    <a href="?team_page={{ teams.next_page_number }}&game_page={{ request.GET.game_page }}" class="btn btn-outline-secondary btn-sm text-white">Next</a>
+    <a href="?team_page={{ teams.paginator.num_pages }}&game_page={{ request.GET.game_page }}" class="btn btn-outline-secondary btn-sm text-white">Last</a>
+    {% endif %}
+</div>
 
 <h3>Played Games</h3>
 <div class ="games-section">
@@ -36,8 +49,22 @@
 
         <strong>{{ game.away_team.name }}</strong>
 
-        <div>{{ game.date }}
+        <div>{{ game.date }}</div>
     </div>
     {% endfor %}
+</div>
+
+<div class="mt-3">
+      {% if games.has_previous %}
+    <a href="?game_page=1&team_page={{ request.GET.team_page }}" class="btn btn-outline-secondary btn-sm text-white">First</a>
+    <a href="?game_page={{ games.previous_page_number }}&team_page={{ request.GET.team_page }}" class="btn btn-outline-secondary btn-sm text-white">Previous</a>
+    {% endif %}
+
+<span class="mx-2">Page {{ games.number }} of {{ games.paginator.num_pages }}</span>
+
+    {% if games.has_next %}
+    <a href="?game_page={{ games.next_page_number }}&team_page={{ request.GET.team_page }}" class="btn btn-outline-secondary btn-sm text-white">Next</a>
+    <a href="?game_page={{ games.paginator.num_pages }}&team_page={{ request.GET.team_page }}" class="btn btn-outline-secondary btn-sm text-white">Last</a>
+    {% endif %}
 </div>
 {% endblock %}
