--- a/templates/teams/team-details-page.html
+++ b/templates/teams/team-details-page.html
@@ -1,4 +1,5 @@
 {% extends 'shared/base.html' %}
+{% load team_extras %}
 {% load static %}
 
 {% block content %}
@@ -12,6 +13,7 @@
 <p><strong>City:</strong> {{ team.city }}</p>
 <p><strong>Year Founded:</strong> {{ team.year_founded }}</p>
 <p><strong>Coach:</strong> {{ team.coach_name }}</p>
+<p><strong>Total Players:</strong> {{ team|player_count }}</p>
     
 <h3>Players</h3>
 
