--- a/templates/games/game-edit-page.html
+++ b/templates/games/game-edit-page.html
@@ -12,4 +12,7 @@
 
 </form>
 </div>
+    
+<br>
+    <a href="{% url 'games:details' game.pk %}" class="btn btn-secondary">Back to Game Details</a>    
 {% endblock %}
