--- a/templates/games/game-add-stats-page.html
+++ b/templates/games/game-add-stats-page.html
@@ -7,4 +7,7 @@
     {{ form.as_p }}
     <button type="submit" class="btn btn-success mt-3">Add Player Stats</button>
 </form>
+    
+<br>
+    <a href="{% url 'games:details' game.pk %}" class="btn btn-secondary">Back to Game Details</a>
 {% endblock %}
